[package]
name = "Transactioner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
getset = "0.1"
csv = "1.3"
mockall = "0.12"
tokio = { version = "1", features = ["full"]  }
futures = "0.3.30"
flume = "0.11.0"

[dev-dependencies]
